# NGG

./: .gitmodules  CMakeLists.txt  NGG.txt  README.md  Syntax.txt  TreeFormat.txt
Example/: a.spub  a.spus  graph.gv  lexemes.lex  listing.lst  main.cpp  test.ngg  testsource.ngg  treestruct.txt
Example/NGGExamples/Fact/: a.spub  a.spus  assembly.spuprep  factorial.ngg  lexemes.lex  listing.lst  treestruct.txt
Example/NGGExamples/NGGExamples.xcodeproj/: project.pbxproj
Example/NGGExamples/NGGExamples.xcodeproj/xcshareddata/xcschemes/: Fact.xcscheme  Scope.xcscheme  SquareRoots.xcscheme  Translations.xcscheme
Example/NGGExamples/Scope/: a.spub  a.spus  assembly.spuprep  lexemes.lex  listing.lst  output.spub  scope.ngg
Example/NGGExamples/SquareRoots/: a.spub  a.spus  assembly.spuprep  lexemes.lex  listing.lst  square.ngg
Example/NGGExamples/Translations/: a.spub  a.spus  assembly.spuprep  generated.ngg  lexemes.lex  listing.lst  test.ngg  treestruct.txt
Example/Translations/: a.spus  generated.ngg  output.spub  treestruct.txt
NGG/: ngg.cpp  nggload.cpp
NGG/AST/: AST.h  ASTCode.h  ASTError.h  ASTLoader.h  ASTNode.h  ASTNodeKind.h  ASTNodeKind.mpl  ParsePosition.h
NGG/ASTLoader/: ASTDumper.h  ASTLoader.h  LoaderParamsParser.h
NGG/Compiler/: CompileError.h  IdentifierType.h  NGGCompiler.h  ScopeProcessor.h  VarTable.h
NGG/Helpers/: Optional.h  ParamsParser.h  Stack.h  StrContainer.h  String.h
NGG/LexicalAnalysis/: LexParser.h  Lexeme.h  LexemeType.h  LexemeType.mpl
SwiftTest/: main.swift  parsed.json
(+2 files in other folders)
